# pulsecord

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
protocol/: browser-activity.schema.json
scripts/: Register-NativeHost.ps1
src/: ActivityPreset.cpp  ActivityPreset.h  BrowserActivityProtocol.cpp  BrowserActivityProtocol.h  BrowserActivitySource.cpp  BrowserActivitySource.h  BrowserPresenceProjection.cpp  BrowserPresenceProjection.h  Config.cpp  Config.h  DiscordPresenceService.cpp  DiscordPresenceService.h  Logging.cpp  Logging.h  MockPresenceSource.cpp  MockPresenceSource.h  NativeMessagingHost.cpp  PresenceSource.h  TrayApplication.cpp  TrayApplication.h  main.cpp
tests/: BrowserActivityTests.cpp
